Boton continuar modificado

--- a/Inicio_Sesion/style.css
+++ b/Inicio_Sesion/style.css
@@ -48,7 +48,7 @@ body{
 
     width: 100px;
     height: 30px;
-    background-color:blue;
+    background-color:rgb(64, 64, 117);
     border: none;
     border-radius: 10px;
     color:azure;
